# coding-agent-hooks

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile.test  LICENSE  README.md  codecov.yml  deny.toml  flake.nix  install.sh  package.json  rust-toolchain.toml  shell.nix  sondera-bundled.ts
adapter/: Cargo.toml  audit.toml
adapter/src/: main.rs
apps/opencode/: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  SECURITY.md  package.json  tsconfig.json
apps/opencode/.github/: dependabot.yml
apps/opencode/.github/workflows/: auto-merge.yml  ci.yml  publish.yml  security.yml
apps/opencode/adapter/: Cargo.toml
apps/opencode/adapter/.cargo/: audit.toml
apps/opencode/docs/: decisions.md
apps/opencode/docs/adr/: 001-two-part-bridge.md  003-stdin-stdout-json-protocol.md  005-ollama-graceful-degradation.md  006-adapter-binary-path-resolution.md  008-persistent-stream-process.md  009-dry-run-mode.md  011-allow-patterns.md  012-jsonl-audit-log.md  013-per-session-metrics.md  014-per-project-config-file.md  015-tui-toast-notifications.md  016-defensive-output-args-guard.md  017-bundled-file-not-tracked.md  019-promise-chain-serialization.md  020-integration-test-strategy.md  022-bundle-export-stripping.md
apps/opencode/docs/design/: allow-patterns.md  audit-log.md  cedar-policy-pipeline.md  data-flow.md  dry-run-mode.md  example-policies.md  initialization-flow.md  tool-normalization.md
apps/opencode/plugin/: package.json
apps/opencode/plugin/src/: audit.ts  config.test.ts  config.ts  index.test.ts  index.ts  integration.test.ts  metrics.ts  toast.ts
apps/opencode/src/: integration.test.ts  normalize.test.ts
apps/opencode/src/policies/: test-deny.cedar
crates/guardrails/anthropic/: Cargo.toml
crates/guardrails/anthropic/src/: lib.rs
crates/guardrails/anthropic/tests/: mock_server.rs
docs/: decisions.md  design.md
policies/: ifc.toml  policies.toml
scripts/: sync-bundle.ts
src/: client.test.ts  (+11 more)
(+27 files in other folders)
