[package]
name = "sondera-opencode"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "opencode hooks for Sondera Agentic Security Platform"

[[bin]]
name = "sondera-opencode-adapter"
path = "src/main.rs"

[dependencies]
sondera-harness = { git = "https://github.com/sondera-ai/sondera-coding-agent-hooks", branch = "main" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std"] }
uuid = { version = "1.0", features = ["v4"] }
